--- a/pharma-frontend/src/App.css
+++ b/pharma-frontend/src/App.css
@@ -1,26 +1,15 @@
 .App {
-  text-align: center;
+  display: block;
+  width: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  font-size: 1.0vw;
 }
 
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
-  color: #61dafb;
+  color: #0a9dc5;
 }
 
 table {
@@ -32,7 +21,7 @@ table {
 td, th {
   border: 1px solid #dddddd;
   text-align: left;
-  padding: 2px;
+  padding: 1px;
   text-align: center;
 }
 
